Use ZonedDateTime everywhere to prevent edge cases when computing week numbers.